# NeuralNote_LV2

./: CMakeLists.txt  LICENSE  README.md
LV2/: BinaryData.h  NeuralNoteShared.h  NoteRangeConfig.h  NoteUtils.h  PiPitchShared.h  README.md  UltraLowLatencyGoertzel.h  manifest.ttl  neuralnote-connect.service  neuralnote-connect.sh  neuralnote_guitar2midi.cpp  neuralnote_impl.cpp  neuralnote_monitor.cpp  neuralnote_tune.cpp  pipitch_impl.cpp  pipitch_test.cpp  pipitch_tune.cpp  plugin.ttl
